[WIP] Use multiproto for typesafe version independend proto handling