@@ -3,58 +3,57 @@ package emu.grasscutter.server.packet.send;
 import emu.grasscutter.Grasscutter;
 import emu.grasscutter.game.player.Player;
 import emu.grasscutter.game.shop.ShopInfo;
-import emu.grasscutter.game.shop.ShopLimit;
 import emu.grasscutter.game.shop.ShopSystem;
-import emu.grasscutter.net.packet.BasePacket;
-import emu.grasscutter.net.packet.PacketOpcodes;
-import emu.grasscutter.net.proto.GetShopRspOuterClass;
-import emu.grasscutter.net.proto.ItemParamOuterClass;
-import emu.grasscutter.net.proto.ShopGoodsOuterClass.ShopGoods;
-import emu.grasscutter.net.proto.ShopOuterClass.Shop;
+import emu.grasscutter.net.packet.BaseTypedPackage;
 import emu.grasscutter.utils.Utils;
+import lombok.val;
+import messages.general.item.ItemParam;
+import messages.shop.GetShopRsp;
+import messages.shop.Shop;
+import messages.shop.ShopGoods;
 
 import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
 
-public class PacketGetShopRsp extends BasePacket {
+public class PacketGetShopRsp extends BaseTypedPackage<GetShopRsp> {
     public PacketGetShopRsp(Player inv, int shopType) {
-        super(PacketOpcodes.GetShopRsp);
+        super(new GetShopRsp());
 
         // TODO: CityReputationLevel
-        Shop.Builder shop = Shop.newBuilder()
-                .setShopType(shopType)
-                .setCityId(1) //mock
-                .setCityReputationLevel(10); //mock
+        val shop = new Shop(shopType);
+        shop.setCityId(1); //mock
+        shop.setCityReputationLevel(10); //mock
 
         ShopSystem manager = Grasscutter.getGameServer().getShopSystem();
         if (manager.getShopData().get(shopType) != null) {
-            List<ShopInfo> list = manager.getShopData().get(shopType);
-            List<ShopGoods> goodsList = new ArrayList<>();
+            val list = manager.getShopData().get(shopType);
+            val goodsList = new ArrayList<ShopGoods>();
             for (ShopInfo info : list) {
-                ShopGoods.Builder goods = ShopGoods.newBuilder()
-                        .setGoodsId(info.getGoodsId())
-                        .setGoodsItem(ItemParamOuterClass.ItemParam.newBuilder().setItemId(info.getGoodsItem().getId()).setCount(info.getGoodsItem().getCount()).build())
-                        .setScoin(info.getScoin())
-                        .setHcoin(info.getHcoin())
-                        .setBuyLimit(info.getBuyLimit())
-                        .setBeginTime(info.getBeginTime())
-                        .setEndTime(info.getEndTime())
-                        .setMinLevel(info.getMinLevel())
-                        .setMaxLevel(info.getMaxLevel())
-                        .setMcoin(info.getMcoin())
-                        .setDisableType(info.getDisableType())
-                        .setSecondarySheetId(info.getSecondarySheetId());
+                val goods = new ShopGoods();
+                goods.setGoodsId(info.getGoodsId());
+                goods.setGoodsItem(new ItemParam(info.getGoodsItem().getId(), info.getGoodsItem().getCount()));
+                goods.setScoin(info.getScoin());
+                goods.setHcoin(info.getHcoin());
+                goods.setBuyLimit(info.getBuyLimit());
+                goods.setBeginTime(info.getBeginTime());
+                goods.setEndTime(info.getEndTime());
+                goods.setMinLevel(info.getMinLevel());
+                goods.setMaxLevel(info.getMaxLevel());
+                goods.setMcoin(info.getMcoin());
+                goods.setDisableType(info.getDisableType());
+                goods.setSecondarySheetId(info.getSecondarySheetId());
                 if (info.getCostItemList() != null) {
-                    goods.addAllCostItemList(info.getCostItemList().stream().map(x -> ItemParamOuterClass.ItemParam.newBuilder().setItemId(x.getId()).setCount(x.getCount()).build()).collect(Collectors.toList()));
+                    goods.setCostItemList(
+                        info.getCostItemList().stream()
+                            .map(x -> new ItemParam(x.getId(), x.getCount()))
+                            .toList());
                 }
                 if (info.getPreGoodsIdList() != null) {
-                    goods.addAllPreGoodsIdList(info.getPreGoodsIdList());
+                    goods.setPreGoodsIdList(info.getPreGoodsIdList());
                 }
 
                 int currentTs = Utils.getCurrentSeconds();
-                ShopLimit currentShopLimit = inv.getGoodsLimit(info.getGoodsId());
-                int nextRefreshTime = ShopSystem.getShopNextRefreshTime(info);
+                val currentShopLimit = inv.getGoodsLimit(info.getGoodsId());
+                val nextRefreshTime = ShopSystem.getShopNextRefreshTime(info);
                 if (currentShopLimit != null) {
                     if (currentShopLimit.getNextRefreshTime() < currentTs) { // second game day
                         currentShopLimit.setHasBoughtInPeriod(0);
@@ -67,12 +66,12 @@ public class PacketGetShopRsp extends BasePacket {
                     goods.setNextRefreshTime(nextRefreshTime);
                 }
 
-                goodsList.add(goods.build());
+                goodsList.add(goods);
             }
-            shop.addAllGoodsList(goodsList);
+            shop.setGoodsList(goodsList);
         }
 
         inv.save();
-        this.setData(GetShopRspOuterClass.GetShopRsp.newBuilder().setShop(shop).build());
+        proto.setShop(shop);
     }
 }
